sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  { 
				while (!plusPetit(i:Int, i+1:Int))
					{ for (j<- 0 to i)
					{echange(i:Int, j:Int)
					}	
					}
}
}
}
